--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ footer p a {
     margin: 5%;
   }
   .wholeQr {
-    margin: 0 9%;
+    margin: 15px auto;
   }
   .mainHeading {
     padding-bottom: 0;
